@@ -19,7 +19,7 @@
 ################################################################################
 # Constants
 
-VERSION=2.15.0
+VERSION=2.16.0
 SHORTNAME="SSL_CERT"
 
 VALID_ATTRIBUTES=",startdate,enddate,subject,issuer,modulus,serial,hash,email,ocsp_uri,fingerprint,"
@@ -2184,6 +2184,8 @@ fetch_certificate() {
             fi
 
         elif ascii_grep 'self[ -]signed certificate' "${ERROR}"; then
+
+            debuglog "self-signed certificate"
 
             if [ -z "${SELFSIGNED}" ]; then
                 prepend_critical_message 'Self signed certificate'
@@ -5042,9 +5044,9 @@ ${WARNING}"
     fi
 
     if [ "${OPENSSL_COMMAND}" != 'crl' ]; then
-	EMAIL="$(extract_cert_attribute 'email' "${CERT}")"
-	debuglog "EMAIL = ${EMAIL}"
-	info "Email" "${EMAIL}"
+	    EMAIL="$(extract_cert_attribute 'email' "${CERT}")"
+	    debuglog "EMAIL = ${EMAIL}"
+	    info "Email" "${EMAIL}"
     fi
 
     ################################################################################
@@ -5076,7 +5078,7 @@ ${WARNING}"
 
         debuglog 'Checking if the certificate was self signed'
 
-        if ascii_grep '^verify\ error:num=[0-9][0-9]*:self\ signed\ certificate' "${ERROR}"; then
+        if ascii_grep '^verify\ error:num=[0-9][0-9]*:self[ -]signed\ certificate' "${ERROR}"; then
 
             debuglog 'Self signed certificate'
 
