@@ -1,4 +1,5 @@
-Remove the trailing . from FQDNs
+2021-12-20 Version  2.16.0: Remove the trailing . from FQDNs
+                            Fixed a problem with self signed certificates
 2021-12-15 Version  2.15.0: Error if HTTP/2 is requested but not offered by the server
                             SSL 2.0 and SSL 3.0 disabled by --all and --all-local
 2021-12-10 Version  2.14.0: Added an option --info to print certificate information
