@@ -1,1 +1,2 @@
  * Remove the trailing . from FQDNs
+ * Fixed a problem with self signed certificates
